# 2drendererforCMC

./: index.html  memory_optimization.txt  renderer.js  style.css
backend/: CMakeLists.txt  build.bat  build.sh  performance_optimization.txt
backend/proto/: renderer.proto
backend/src/: client.cpp  redis_client.cpp  redis_client.h  server.cpp  service.cpp  service.h  storage.cpp  storage.h
